UI Fixed on Mobile breadcrumb and minor ones

--- a/public/css/collections/containers.less
+++ b/public/css/collections/containers.less
@@ -18,7 +18,7 @@
 }
 
 .container_wrap {
-  padding: 1em 0;
+  padding: 1em;
   margin:0 auto;
   margin-top: @logoHeight !important;
 
@@ -30,6 +30,6 @@
   }
   @media all and (min-width:@big-screen) {
     padding: 0;
-    padding: 2em 0;
+    // padding: 2em 0;
   }
 }
