--- a/public/css/style.less
+++ b/public/css/style.less
@@ -76,6 +76,7 @@ body {
   height: 1px;
   background: #f4f4f4;
   margin: 1.5em 0;
+  margin-top: 0;
 }
 .separator_blank {
   width: 100%;
